--- a/auth-server/pom.xml
+++ b/auth-server/pom.xml
@@ -45,19 +45,12 @@
 
         <!--Database and JPA-->
         <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
-        <!--Spring cloud stream and RabbitMQ-->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
-            <version>3.0.1.RELEASE</version>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
         </dependency>
 
         <!--Config client-->
@@ -66,7 +59,7 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
 
-        <!--Config client-->
+        <!--Eureka client-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
