auth server H2 database properties.

--- a/properties/users-service/users-service-dev.properties
+++ b/properties/users-service/users-service-dev.properties
@@ -1,8 +1,10 @@
 management.endpoints.web.exposure.include=*
+# Eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.client.service-url.defaultZone=http://admin:12345678@localhost:8095/eureka
 eureka.instance.status-page-url-path=${server.servlet.context-path}/actuator/info
 eureka.instance.health-check-url-path=${server.servlet.context-path}/actuator/health
+# Database
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 spring.datasource.url=jdbc:h2:mem:testdb
