--- a/properties/auth-server/auth-server-dev.properties
+++ b/properties/auth-server/auth-server-dev.properties
@@ -1,8 +1,18 @@
 management.endpoints.web.exposure.include=*
+# Eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.client.service-url.defaultZone=http://admin:12345678@localhost:8095/eureka
 eureka.instance.status-page-url-path=${server.servlet.context-path}/actuator/info
 eureka.instance.health-check-url-path=${server.servlet.context-path}/actuator/health
+# Database
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=12345678
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# JWT - Oauth
 jwt.secret.key=ultra_secret_key
 jwt.access-token.expiration-time=600
 jwt.refresh-token.expiration-time=604800
