feat: local directory for config files.

--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -20,11 +20,7 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-server</artifactId>
-		</dependency>
-
+		<!--Spring boot-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -36,6 +32,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!--Config server-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-server</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
