--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=config-server
 server.port=8888
-spring.cloud.config.server.git.uri=file:///C:/Sources/personal-projects/microservices-spring-boot-boilerplate/properties
-spring.cloud.config.server.git.search-paths=auth-server,zuul-server
+spring.profiles.active=native
+directory.location=file:///C:/Sources/personal-projects/microservices-spring-boot-boilerplate/properties
+spring.cloud.config.server.native.search-locations=${directory.location}/auth-server,${directory.location}/eureka-server,${directory.location}/zuul-server,${directory.location}/users-service,
